<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.MaterialTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EDED"
    android:orientation="vertical"
    tools:context=".JustSay">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
            </com.google.android.gms.ads.AdView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal"
                android:weightSum="7">

                <Spinner
                    android:id="@+id/idFromSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="3"
                    android:padding="3dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/right"
                    app:tint="#47A5E8" />

                <Spinner
                    android:id="@+id/idToSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="3"
                    android:padding="3dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="20">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_weight="18"
                    android:hint="@string/source_text"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:textColorHint="@color/black_shade_1"
                    ads:boxBackgroundColor="#FFFFFF"
                    app:hintTextColor="@color/black_shade_1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/idEdtsource"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center"
                        android:importantForAutofill="no"
                        android:inputType="textImeMultiLine|textMultiLine"
                        android:textColor="@color/black_shade_1"
                        android:textColorHint="@color/black_shade_1"
                        android:textSize="14sp"
                        ads:boxBackgroundColor="#FFFFFF" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/sourseTexeShare"
                    android:layout_width="11dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:contentDescription="@string/share_button"
                    android:src="@drawable/share"
                    app:tint="#47A5E8"
                    tools:ignore="RedundantDescriptionCheck" />

            </LinearLayout>

            <ImageView
                android:id="@+id/swapButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:rotation="90"
                android:src="@drawable/arrow"
                app:tint="#47A5E8" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="20">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_weight="18"
                    android:hint="@string/translated_text"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:textColorHint="@color/black_shade_1"
                    ads:boxBackgroundColor="#FFFFFF"
                    app:hintTextColor="@color/black_shade_1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/idEdttranslated"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="14"
                        android:ems="10"
                        android:gravity="center"
                        android:importantForAutofill="no"
                        android:inputType="textImeMultiLine|textMultiLine"
                        android:textColor="@color/black_shade_1"
                        android:textColorHint="@color/black_shade_1"
                        android:textSize="14sp"
                        ads:boxBackgroundColor="#FFFFFF" />
                </com.google.android.material.textfield.TextInputLayout>


                <ImageView
                    android:id="@+id/translatedTexeShare"
                    android:layout_width="11dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:contentDescription="@string/share_button"
                    android:src="@drawable/share"
                    app:tint="#47A5E8"
                    tools:ignore="RedundantDescriptionCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/say_something"
                    android:gravity="center"
                    android:text="@string/speak_here"
                    android:textColor="#A66F6F"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/idMic"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/say_something"
                    android:paddingTop="5dp"
                    android:src="@drawable/mic"
                    app:tint="#47A5E8" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_after_share"
                    android:textColor="#A66F6F" />

                <CheckBox
                    android:id="@+id/checkBoxId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#A66F6F" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/idBtnTranslate"
                android:layout_width="320dp"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/translate"
                android:textAllCaps="false"
                ads:backgroundTint="#47A5E8"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>